Fixed login on mobile

--- a/web/frontend/app/src/assets/utils.css
+++ b/web/frontend/app/src/assets/utils.css
@@ -135,6 +135,7 @@
 .gradient-text {
     background: linear-gradient(135deg, var(--color-accent-1), var(--color-accent-2));
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
